# crispy_neurobrutalist

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  neurobrutalist.css  pyproject.toml
src/crispy_neurobrutalist/: __init__.py  apps.py  layout.py  neurobrutalist.py
src/crispy_neurobrutalist/static/crispy_neurobrutalist/css/: neurobrutalist.css
src/crispy_neurobrutalist/templates/neobrutalist/: display_form.html  errors.html  field.html  inputs.html  uni_form.html  whole_uni_form.html
src/crispy_neurobrutalist/templates/neobrutalist/layout/:  multiselect.html  attrs.html  baseinput.html  checkbox.html  checkboxselectmultiple.html  clearablefileinput.html  dateinput.html  datetimeinput.html  emailinput.html  field_errors_block.html  fileinput.html  help_text.html  help_text_and_errors.html  inline_checkboxes.html  inline_field.html  inline_radios.html  multiselect.html  numberinput.html  passwordinput.html  radioselect.html  row.html  select.html  textarea.html  textinput.html  timeinput.html  urlinput.html
src/crispy_neurobrutalist/templatetags/: neo_field.py
tests/: __init__.py  settings.py  test_layout.py  test_neurobrutalist.py
