[project]
name = "crispy-neurobrutalist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jhonatan Rian", email = "jhonatanrian.jr@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "django-crispy-forms>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
